--- a/spring-security/src/main/resources/templates/signIn.html
+++ b/spring-security/src/main/resources/templates/signIn.html
@@ -38,6 +38,11 @@
              alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
+        <div th:if="${param.error}" class="alert alert-danger alert-dismissible fade show" role="alert">
+            <small>Incorrect username or password!</small>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
         <div class="form-floating">
             <input name="username" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Username</label>
